added class balancing code

--- a/cdc_diabetes_project.ipynb
+++ b/cdc_diabetes_project.ipynb
@@ -11,8 +11,7 @@
      "output_type": "stream",
      "text": [
       "Collecting ucimlrepo\n",
-      "  Downloading ucimlrepo-0.0.6-py3-none-any.whl.metadata (5.3 kB)\n",
-      "Downloading ucimlrepo-0.0.6-py3-none-any.whl (8.0 kB)\n",
+      "  Downloading ucimlrepo-0.0.6-py3-none-any.whl (8.0 kB)\n",
       "Installing collected packages: ucimlrepo\n",
       "Successfully installed ucimlrepo-0.0.6\n"
      ]
@@ -489,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c79647ba-608b-4e07-875d-8bb1d7cdceb2",
    "metadata": {},
    "outputs": [
@@ -584,7 +583,7 @@
        "[253680 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,8 +594,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6cd7ba91-82ad-4e97-9525-b85a8a099c20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_diabetes_index = y.query('Diabetes_binary == 0').sample(30000)\n",
+    "diabetes_index = y.query('Diabetes_binary > 0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d12d883d-c0a1-4fde-a811-aea1fc6637a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/6m/y4cnh6_n3wdcwwtbc5lbmlm80000gn/T/ipykernel_74704/692853196.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  y = no_diabetes_index.append(diabetes_index)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = no_diabetes_index.append(diabetes_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5a96df6b-8e11-4e92-a8d4-617cfae252bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X.loc[y.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b1cf06a0-f1fa-437b-9643-ebbeb7de5430",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((65346, 21), (65346, 1))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b0acfe-2e05-4aa8-b9a8-7e3b6c623a67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -618,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
